# dto/inviteCodeDto.go
@@ -1,0 +1,5 @@
+package dto
+
+type InviteCodeDto struct {
+	Code string `json:"code"`
+}
